# diagrams-patterns

./: README.md  poc_aws_complex.py  poc_dot_grid.py  poc_grid.py  poc_neato_overlap.py  poc_subnet_overlapping.py  pyproject.toml
diagrams_patterns/: __init__.py  aws.py  neato.py  neato_aws.py
