[tool.poetry]
name = "diagrams_patterns"
version = "0.1.0-alpha1"
description = "a collection of patterns for diagrams that can be reused in different projects"
authors = ["Anddd7 <anddd7@icloud.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
diagrams-ext = "^0.23.5-alpha.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
